apps/ping-pong-exercise-3.01-gke/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
spec:
  type: LoadBalancer
  selector:
    app: ping-pong
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 4000
